tests/expectations/parser/functions/public_const_param_fail.out
namespace = "Parse"
expectation = "Fail"
outputs = ["""
Error [EPAR0370009]: unexpected string: expected 'identifier', found 'const'
    --> test:4:31
     |
   4 |     function x(x: u32, public const y: i32) {
     |                               ^^^^^"""]
